# miserableproject.club

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  agents.md  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/comments/: forms.py  models.py  tests.py  urls.py  views.py
apps/core/: context_processors.py  forms.py  urls.py  utils.py  views.py
apps/moderation/: apps.py  forms.py  urls.py  views.py
apps/submissions/: admin.py  apps.py  forms.py  markdown.py  models.py  sitemaps.py  urls.py  views.py
config/: settings.py  urls.py
markownify/: __init__.py
miserableproject/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
static/js/: dos-caret.js  pjax.js  sound.js
templates/: 404.html  500.html  base.html
templates/account/: login.html  password_reset.html  signup.html
templates/comments/: edit.html  form.html
templates/core/: home.html  profile.html  tag.html
templates/moderation/: report_form.html  report_success.html
templates/partials/: articles_list.html  comment.html  comments.html  footer.html  header.html  items_list.html  messages.html  pagination.html  robots_noindex_if_paginated.html  tag_nav.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  signup.html
(+31 files in other folders)
